zamna-spin/bindings/http_trigger.h

typedef struct wasi_io_0_2_0_poll_own_pollable_t {
  int32_t __handle;
} wasi_io_0_2_0_poll_own_pollable_t;
// A duration of time, in nanoseconds.
typedef uint64_t wasi_clocks_0_2_0_monotonic_clock_duration_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef struct wasi_io_0_2_0_streams_own_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_output_stream_t;
typedef struct {
  uint8_t *ptr;
  size_t len;
} http_trigger_list_u8_t;
typedef struct wasi_sockets_0_2_0_network_borrow_network_t {
  int32_t __handle;
} wasi_sockets_0_2_0_network_borrow_network_t;
// Error codes.
// 
// In theory, every API can return any error code.
// In practice, API's typically only return the errors documented per API
// combined with a couple of errors that are always possible:
// - `unknown`
// - `access-denied`
// - `not-supported`
// - `out-of-memory`
// - `concurrency-conflict`
// 
// See each individual API for what the POSIX equivalents are. They sometimes differ per API.
typedef uint8_t wasi_sockets_0_2_0_network_error_code_t;
typedef uint8_t wasi_sockets_0_2_0_network_ip_address_family_t;
typedef struct wasi_sockets_0_2_0_network_ipv4_socket_address_t {
  // sin_port
  uint16_t   port;
  // sin_addr
  wasi_sockets_0_2_0_network_ipv4_address_t   address;
} wasi_sockets_0_2_0_network_ipv4_socket_address_t;
typedef struct wasi_sockets_0_2_0_network_ipv6_socket_address_t {
  // sin6_port
  uint16_t   port;
  // sin6_flowinfo
  uint32_t   flow_info;
  // sin6_addr
  wasi_sockets_0_2_0_network_ipv6_address_t   address;
  // sin6_scope_id
  uint32_t   scope_id;
} wasi_sockets_0_2_0_network_ipv6_socket_address_t;
typedef struct wasi_sockets_0_2_0_network_ip_socket_address_t {
  uint8_t tag;
  union {
    wasi_sockets_0_2_0_network_ipv4_socket_address_t     ipv4;
    wasi_sockets_0_2_0_network_ipv6_socket_address_t     ipv6;
  } val;
} wasi_sockets_0_2_0_network_ip_socket_address_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_udp_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_socket_address_t wasi_sockets_0_2_0_udp_ip_socket_address_t;
// A received datagram.
typedef struct wasi_sockets_0_2_0_udp_incoming_datagram_t {
  // The payload.
  // 
  // Theoretical max size: ~64 KiB. In practice, typically less than 1500 bytes.
  http_trigger_list_u8_t   data;
  // The source address.
  // 
  // This field is guaranteed to match the remote address the stream was initialized with, if any.
  // 
  // Equivalent to the `src_addr` out parameter of `recvfrom`.
  wasi_sockets_0_2_0_udp_ip_socket_address_t   remote_address;
} wasi_sockets_0_2_0_udp_incoming_datagram_t;
typedef struct {
  bool is_some;
  wasi_sockets_0_2_0_udp_ip_socket_address_t val;
} wasi_sockets_0_2_0_udp_option_ip_socket_address_t;
// A datagram to be sent out.
typedef struct wasi_sockets_0_2_0_udp_outgoing_datagram_t {
  // The payload.
  http_trigger_list_u8_t   data;
  // The destination address.
  // 
  // The requirements on this field depend on how the stream was initialized:
  // - with a remote address: this field must be None or match the stream's remote address exactly.
  // - without a remote address: this field is required.
  // 
  // If this value is None, the send operation is equivalent to `send` in POSIX. Otherwise it is equivalent to `sendto`.
  wasi_sockets_0_2_0_udp_option_ip_socket_address_t   remote_address;
} wasi_sockets_0_2_0_udp_outgoing_datagram_t;
typedef struct wasi_sockets_0_2_0_udp_own_udp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_own_udp_socket_t;
typedef struct wasi_sockets_0_2_0_udp_borrow_udp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_borrow_udp_socket_t;
typedef struct wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t;
typedef struct wasi_sockets_0_2_0_udp_borrow_incoming_datagram_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_borrow_incoming_datagram_stream_t;
typedef struct wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t;
typedef struct wasi_sockets_0_2_0_udp_borrow_outgoing_datagram_stream_t {
  int32_t __handle;
} wasi_sockets_0_2_0_udp_borrow_outgoing_datagram_stream_t;
typedef wasi_sockets_0_2_0_network_borrow_network_t wasi_sockets_0_2_0_udp_borrow_network_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_void_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t f0;
  wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t f1;
} wasi_sockets_0_2_0_udp_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_ip_socket_address_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_ip_socket_address_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint8_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_u8_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_u64_error_code_t;
typedef wasi_io_0_2_0_poll_own_pollable_t wasi_sockets_0_2_0_udp_own_pollable_t;
typedef struct {
  wasi_sockets_0_2_0_udp_incoming_datagram_t *ptr;
  size_t len;
} wasi_sockets_0_2_0_udp_list_incoming_datagram_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_list_incoming_datagram_t ok;
    wasi_sockets_0_2_0_udp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_result_list_incoming_datagram_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_udp_outgoing_datagram_t *ptr;
  size_t len;
} wasi_sockets_0_2_0_udp_list_outgoing_datagram_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_udp_create_socket_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_address_family_t wasi_sockets_0_2_0_udp_create_socket_ip_address_family_t;
typedef wasi_sockets_0_2_0_udp_own_udp_socket_t wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t ok;
    wasi_sockets_0_2_0_udp_create_socket_error_code_t err;
  } val;
} wasi_sockets_0_2_0_udp_create_socket_result_own_udp_socket_error_code_t;
typedef wasi_clocks_0_2_0_monotonic_clock_duration_t wasi_sockets_0_2_0_tcp_duration_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_tcp_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_socket_address_t wasi_sockets_0_2_0_tcp_ip_socket_address_t;
typedef wasi_sockets_0_2_0_network_ip_address_family_t wasi_sockets_0_2_0_tcp_ip_address_family_t;
typedef uint8_t wasi_sockets_0_2_0_tcp_shutdown_type_t;
typedef struct wasi_sockets_0_2_0_tcp_own_tcp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_tcp_own_tcp_socket_t;
typedef struct wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t {
  int32_t __handle;
} wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t;
typedef wasi_sockets_0_2_0_network_borrow_network_t wasi_sockets_0_2_0_tcp_borrow_network_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_void_error_code_t;
typedef wasi_io_0_2_0_streams_own_input_stream_t wasi_sockets_0_2_0_tcp_own_input_stream_t;
typedef wasi_io_0_2_0_streams_own_output_stream_t wasi_sockets_0_2_0_tcp_own_output_stream_t;
typedef struct {
  wasi_sockets_0_2_0_tcp_own_input_stream_t f0;
  wasi_sockets_0_2_0_tcp_own_output_stream_t f1;
} wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_tuple2_own_input_stream_own_output_stream_error_code_t;
typedef struct {
  wasi_sockets_0_2_0_tcp_own_tcp_socket_t f0;
  wasi_sockets_0_2_0_tcp_own_input_stream_t f1;
  wasi_sockets_0_2_0_tcp_own_output_stream_t f2;
} wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_tuple3_own_tcp_socket_own_input_stream_own_output_stream_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_ip_socket_address_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_ip_socket_address_error_code_t;
typedef struct {
  bool is_err;
  union {
    bool ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_bool_error_code_t;
typedef struct {
  bool is_err;
  union {
    wasi_sockets_0_2_0_tcp_duration_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_duration_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint32_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u32_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint8_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u8_error_code_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    wasi_sockets_0_2_0_tcp_error_code_t err;
  } val;
} wasi_sockets_0_2_0_tcp_result_u64_error_code_t;
typedef wasi_io_0_2_0_poll_own_pollable_t wasi_sockets_0_2_0_tcp_own_pollable_t;
typedef wasi_sockets_0_2_0_network_error_code_t wasi_sockets_0_2_0_tcp_create_socket_error_code_t;
typedef wasi_sockets_0_2_0_network_ip_address_family_t wasi_sockets_0_2_0_tcp_create_socket_ip_address_family_t;
typedef wasi_sockets_0_2_0_tcp_own_tcp_socket_t wasi_sockets_0_2_0_tcp_create_socket_own_tcp_socket_t;