zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

pub const wasi_sockets_0_2_0_udp_option_ip_socket_address_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_sockets_0_2_0_udp_ip_socket_address_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_udp_ip_socket_address_t),
};
pub const struct_wasi_sockets_0_2_0_udp_outgoing_datagram_t = extern struct {
    data: http_trigger_list_u8_t = @import("std").mem.zeroes(http_trigger_list_u8_t),
    remote_address: wasi_sockets_0_2_0_udp_option_ip_socket_address_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_udp_option_ip_socket_address_t),
};
pub const wasi_sockets_0_2_0_udp_outgoing_datagram_t = struct_wasi_sockets_0_2_0_udp_outgoing_datagram_t;
pub const struct_wasi_sockets_0_2_0_udp_own_udp_socket_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_own_udp_socket_t = struct_wasi_sockets_0_2_0_udp_own_udp_socket_t;
pub const struct_wasi_sockets_0_2_0_udp_borrow_udp_socket_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_borrow_udp_socket_t = struct_wasi_sockets_0_2_0_udp_borrow_udp_socket_t;
pub const struct_wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t = struct_wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t;
pub const struct_wasi_sockets_0_2_0_udp_borrow_incoming_datagram_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_borrow_incoming_datagram_stream_t = struct_wasi_sockets_0_2_0_udp_borrow_incoming_datagram_stream_t;
pub const struct_wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t = struct_wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t;
pub const struct_wasi_sockets_0_2_0_udp_borrow_outgoing_datagram_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_udp_borrow_outgoing_datagram_stream_t = struct_wasi_sockets_0_2_0_udp_borrow_outgoing_datagram_stream_t;
pub const wasi_sockets_0_2_0_udp_borrow_network_t = wasi_sockets_0_2_0_network_borrow_network_t;
const union_unnamed_74 = extern union {
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_void_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_74 = @import("std").mem.zeroes(union_unnamed_74),
};
pub const wasi_sockets_0_2_0_udp_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_t = extern struct {
    f0: wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_udp_own_incoming_datagram_stream_t),
    f1: wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_udp_own_outgoing_datagram_stream_t),
};
const union_unnamed_75 = extern union {
    ok: wasi_sockets_0_2_0_udp_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_t,
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_tuple2_own_incoming_datagram_stream_own_outgoing_datagram_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_75 = @import("std").mem.zeroes(union_unnamed_75),
};
const union_unnamed_76 = extern union {
    ok: wasi_sockets_0_2_0_udp_ip_socket_address_t,
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_ip_socket_address_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_76 = @import("std").mem.zeroes(union_unnamed_76),
};
const union_unnamed_77 = extern union {
    ok: u8,
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_u8_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_77 = @import("std").mem.zeroes(union_unnamed_77),
};
const union_unnamed_78 = extern union {
    ok: u64,
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_u64_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_78 = @import("std").mem.zeroes(union_unnamed_78),
};
pub const wasi_sockets_0_2_0_udp_own_pollable_t = wasi_io_0_2_0_poll_own_pollable_t;
pub const wasi_sockets_0_2_0_udp_list_incoming_datagram_t = extern struct {
    ptr: [*c]wasi_sockets_0_2_0_udp_incoming_datagram_t = @import("std").mem.zeroes([*c]wasi_sockets_0_2_0_udp_incoming_datagram_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_79 = extern union {
    ok: wasi_sockets_0_2_0_udp_list_incoming_datagram_t,
    err: wasi_sockets_0_2_0_udp_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_result_list_incoming_datagram_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_79 = @import("std").mem.zeroes(union_unnamed_79),
};
pub const wasi_sockets_0_2_0_udp_list_outgoing_datagram_t = extern struct {
    ptr: [*c]wasi_sockets_0_2_0_udp_outgoing_datagram_t = @import("std").mem.zeroes([*c]wasi_sockets_0_2_0_udp_outgoing_datagram_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const wasi_sockets_0_2_0_udp_create_socket_error_code_t = wasi_sockets_0_2_0_network_error_code_t;
pub const wasi_sockets_0_2_0_udp_create_socket_ip_address_family_t = wasi_sockets_0_2_0_network_ip_address_family_t;
pub const wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t = wasi_sockets_0_2_0_udp_own_udp_socket_t;
const union_unnamed_80 = extern union {
    ok: wasi_sockets_0_2_0_udp_create_socket_own_udp_socket_t,
    err: wasi_sockets_0_2_0_udp_create_socket_error_code_t,
};
pub const wasi_sockets_0_2_0_udp_create_socket_result_own_udp_socket_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_80 = @import("std").mem.zeroes(union_unnamed_80),
};
pub const wasi_sockets_0_2_0_tcp_duration_t = wasi_clocks_0_2_0_monotonic_clock_duration_t;
pub const wasi_sockets_0_2_0_tcp_error_code_t = wasi_sockets_0_2_0_network_error_code_t;
pub const wasi_sockets_0_2_0_tcp_ip_socket_address_t = wasi_sockets_0_2_0_network_ip_socket_address_t;
pub const wasi_sockets_0_2_0_tcp_ip_address_family_t = wasi_sockets_0_2_0_network_ip_address_family_t;
pub const wasi_sockets_0_2_0_tcp_shutdown_type_t = u8;
pub const struct_wasi_sockets_0_2_0_tcp_own_tcp_socket_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_tcp_own_tcp_socket_t = struct_wasi_sockets_0_2_0_tcp_own_tcp_socket_t;
pub const struct_wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t = struct_wasi_sockets_0_2_0_tcp_borrow_tcp_socket_t;
pub const wasi_sockets_0_2_0_tcp_borrow_network_t = wasi_sockets_0_2_0_network_borrow_network_t;
const union_unnamed_81 = extern union {
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_void_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_81 = @import("std").mem.zeroes(union_unnamed_81),
};
pub const wasi_sockets_0_2_0_tcp_own_input_stream_t = wasi_io_0_2_0_streams_own_input_stream_t;
pub const wasi_sockets_0_2_0_tcp_own_output_stream_t = wasi_io_0_2_0_streams_own_output_stream_t;
pub const wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t = extern struct {
    f0: wasi_sockets_0_2_0_tcp_own_input_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_tcp_own_input_stream_t),
    f1: wasi_sockets_0_2_0_tcp_own_output_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_tcp_own_output_stream_t),
};
const union_unnamed_82 = extern union {
    ok: wasi_sockets_0_2_0_tcp_tuple2_own_input_stream_own_output_stream_t,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_tuple2_own_input_stream_own_output_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_82 = @import("std").mem.zeroes(union_unnamed_82),
};
pub const wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t = extern struct {
    f0: wasi_sockets_0_2_0_tcp_own_tcp_socket_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_tcp_own_tcp_socket_t),
    f1: wasi_sockets_0_2_0_tcp_own_input_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_tcp_own_input_stream_t),
    f2: wasi_sockets_0_2_0_tcp_own_output_stream_t = @import("std").mem.zeroes(wasi_sockets_0_2_0_tcp_own_output_stream_t),
};
const union_unnamed_83 = extern union {
    ok: wasi_sockets_0_2_0_tcp_tuple3_own_tcp_socket_own_input_stream_own_output_stream_t,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_tuple3_own_tcp_socket_own_input_stream_own_output_stream_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_83 = @import("std").mem.zeroes(union_unnamed_83),
};
const union_unnamed_84 = extern union {
    ok: wasi_sockets_0_2_0_tcp_ip_socket_address_t,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_ip_socket_address_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_84 = @import("std").mem.zeroes(union_unnamed_84),
};
const union_unnamed_85 = extern union {
    ok: bool,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_bool_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_85 = @import("std").mem.zeroes(union_unnamed_85),
};
const union_unnamed_86 = extern union {
    ok: wasi_sockets_0_2_0_tcp_duration_t,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_duration_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_86 = @import("std").mem.zeroes(union_unnamed_86),
};
const union_unnamed_87 = extern union {
    ok: u32,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_u32_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_87 = @import("std").mem.zeroes(union_unnamed_87),
};
const union_unnamed_88 = extern union {
    ok: u8,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_u8_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_88 = @import("std").mem.zeroes(union_unnamed_88),
};
const union_unnamed_89 = extern union {
    ok: u64,
    err: wasi_sockets_0_2_0_tcp_error_code_t,
};
pub const wasi_sockets_0_2_0_tcp_result_u64_error_code_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_89 = @import("std").mem.zeroes(union_unnamed_89),
};
pub const wasi_sockets_0_2_0_tcp_own_pollable_t = wasi_io_0_2_0_poll_own_pollable_t;
pub const wasi_sockets_0_2_0_tcp_create_socket_error_code_t = wasi_sockets_0_2_0_network_error_code_t;
pub const wasi_sockets_0_2_0_tcp_create_socket_ip_address_family_t = wasi_sockets_0_2_0_network_ip_address_family_t;
pub const wasi_sockets_0_2_0_tcp_create_socket_own_tcp_socket_t = wasi_sockets_0_2_0_tcp_own_tcp_socket_t;
const union_unnamed_90 = extern union {
    ok: wasi_sockets_0_2_0_tcp_create_socket_own_tcp_socket_t,
    err: wasi_sockets_0_2_0_tcp_create_socket_error_code_t,
};
